<resources>
    <string name="app_name">GridLayout</string>
    <string name="hint_input_ET">input</string>
    <string name="hint_result_TV">result</string>
    <string name="text_div_BTN">/</string>
    <string name="text_one_BTN">1</string>
    <string name="text_two_BTN">2</string>
    <string name="text_three_BTN">3</string>
    <string name="text_mult_BTN">*</string>
    <string name="text_four_BTN">4</string>
    <string name="text_five_BTN">5</string>
    <string name="text_six_BTN">6</string>
    <string name="text_sub_BTN">-</string>
    <string name="text_seven_BTN">7</string>
    <string name="text_eight_BTN">8</string>
    <string name="text_nine_BTN">9</string>
    <string name="text_zero_BTN">0</string>
    <string name="text_sum_BTN">+</string>
    <string name="text_result_BTN">=</string>
    <string name="text_reset_BTN">reset</string>
    <string name="exit">Выход</string>
</resources>