<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarColor"
        tools:ignore="Miss,MissingConstraints" />

    <EditText
        android:id="@+id/inputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:hint="@string/hint_input_ET"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
        android:ems="10"
        />

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:gravity="center"
        android:hint="@string/hint_result_TV"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintTop_toBottomOf="@+id/inputET" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:columnCount="4"
        android:rowCount="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTV">

        <Button
            android:id="@+id/divBTN"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/text_div_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/oneBTN"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/text_one_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/twoBTN"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/text_two_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/threeBTN"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/text_three_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/multBTN"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/text_mult_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fourBTN"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/text_four_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fiveBTN"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/text_five_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sixBTN"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/text_six_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/subBTN"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/text_sub_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sevenBTN"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/text_seven_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/eightBTN"
            android:layout_row="4"
            android:layout_column="1"
            android:text="@string/text_eight_BTN"
            android:textStyle="bold" />
        />

        <Button
            android:id="@+id/nineBTN"
            android:layout_row="4"
            android:layout_column="2"
            android:text="@string/text_nine_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/zeroBTN"
            android:layout_width="180dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="@string/text_zero_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sumBTN"
            android:layout_height="150dp"
            android:layout_row="4"
            android:layout_rowSpan="3"
            android:layout_column="3"
            android:text="@string/text_sum_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resultBTN"
            android:layout_width="270dp"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:text="@string/text_result_BTN"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resetBTN"
            android:layout_width="360dp"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:text="@string/text_reset_BTN"
            android:textStyle="bold" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>